--- a/index.html
+++ b/index.html
@@ -3,87 +3,147 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manav - Chess Coach</title>
+  <title>Chess Coach</title>
   <style>
+    /* Reset & Base */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 0;
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background: linear-gradient(to right, #141E30, #243B55);
+      color: white;
       line-height: 1.6;
-      color: #333;
     }
+
+    /* Navbar */
     header {
-      background: #222;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    .container {
-      width: 90%;
-      max-width: 800px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #444;
-      margin-bottom: 10px;
-    }
-    p {
-      margin: 10px 0;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #0073e6;
-      color: #fff;
+    header h1 { font-size: 1.5rem; }
+    nav a {
+      color: white;
+      margin: 0 1rem;
       text-decoration: none;
-      border-radius: 5px;
       transition: 0.3s;
     }
-    .btn:hover {
-      background: #005bb5;
-    }
-    footer {
+    nav a:hover { color: #FFD700; }
+
+    /* Hero Section */
+    .hero {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      padding: 15px;
-      background: #222;
-      color: #fff;
-      margin-top: 20px;
+      background: url("https://upload.wikimedia.org/wikipedia/commons/2/2c/Chess_board_opening_staunton.jpg") no-repeat center/cover;
+      position: relative;
+    }
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+    }
+    .hero-content {
+      position: relative;
+      z-index: 1;
+    }
+    .hero h2 { font-size: 3rem; margin-bottom: 1rem; }
+    .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
+    .btn {
+      background: #FFD700;
+      color: black;
+      padding: 0.8rem 1.5rem;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .btn:hover { background: #FFA500; }
+
+    /* Sections */
+    section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
+    }
+    h2 { margin-bottom: 1rem; font-size: 2rem; color: #FFD700; }
+
+    /* Contact */
+    .contact-info {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 10px;
+      display: inline-block;
+      margin-top: 1rem;
+    }
+    .contact-info p {
+      margin: 0.5rem 0;
+    }
+
+    /* Footer */
+    footer {
+      background: black;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
+
+  <!-- Navbar -->
   <header>
-    <h1>Manav Dobriyal</h1>
-    <p>Beginner Chess Coach</p>
+    <h1>♟ Chess Coach</h1>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <div class="container">
+  <!-- Hero -->
+  <section class="hero" id="home">
+    <div class="hero-content">
+      <h2>Master the Game of Kings</h2>
+      <p>Learn chess strategies, openings, and tactics to dominate the board.</p>
+      <a href="#contact" class="btn">Contact Me</a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about">
     <h2>About Me</h2>
-    <p>Hi! I’m Manav. I’ve been playing chess for more than 3 years. My current rating is around 1300 on Lichess, and I recently became active again on Chess.com. Chess has helped me develop focus and strategic thinking, and now I enjoy helping beginners learn and improve step by step.</p>
+    <p>
+      I’m a passionate chess player and coach.  
+      My goal is to help you sharpen your mind, master tactics,  
+      and improve your chess skills — whether you’re a beginner or advanced player.
+    </p>
+  </section>
 
-    <h2>What I Offer</h2>
-    <ul>
-      <li>Step-by-step lessons for beginners</li>
-      <li>Explaining rules, piece movement, and game basics</li>
-      <li>Simple openings and tactical ideas</li>
-      <li>Game analysis and improvement tips</li>
-    </ul>
+<section id="contact" class="contact">
+  <h2>Contact Me</h2>
+  <p>If you’d like to reach me, feel free to email me:</p>
+  <p>
+    📧 <a href="mailto:manavdobriyal@gmail.com">manavdobriyal@gmail.com</a>
+  </p>
+</section>
 
-    <a href="mailto:your-email@example.com" class="btn">Contact Me</a>
-  </div>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Manav Dobriyal | Chess Coaching Portfolio</p>
+    <p>© 2025 Chess Coach | Designed with ♟ passion</p>
   </footer>
+
 </body>
 </html>
+
